Removed 'js-2' directory from tracking

--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/jkdfrance/regenord/issues"
   },
-  "homepage": "https://github.com/jkdfrance/regenord#readme"
+  "homepage": "https://github.com/jkdfrance/regenord#readme",
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  }
 }
